# tympanus

./: .gitattributes  AUTHORS  Makefile.am  Makefile.in  README  configure  configure.ac
src/: Makefile.am  Makefile.in  about_dialog.c  about_dialog.h  lang.h  main.c  menubar.c  menubar.h  playback.c  playback.h  signals.c  signals.h  statusbar.c  statusbar.h  statusbar_separator.c  statusbar_separator.h  toolbar.c  toolbar.h  variables.h  video_area.c  video_area.h  window.c  window.h
